# borghash

./: .gitignore  CHANGES.rst  LICENSE.rst  README.rst  borghash.pxd  borghash.pyx  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
requirements.d/: dev.txt
src/borghash/: HashTable.pxd  HashTable.pyx  HashTableNT.pxd  HashTableNT.pyx  __init__.py  __main__.py  _borghash.pyx  borghash.pxd  borghash.pyx  key_value.cpp
tests/: benchmark_test.py  borghash_test.py  hashtable_benchmark_test.py  hashtable_stress_test.py  hashtable_test.py  hashtablent_mmap_test.py  hashtablent_test.py
