[project]
name = "borghash"
dynamic = ["version"]
authors = [{name="The Borg Collective (see AUTHORS file)"}]
maintainers = [
    {name="Thomas Waldmann", email="tw@waldmann-edv.de"},
]
description = "Memory-efficient hash table (implemented in Cython)"
requires-python = ">=3.9"
keywords = ["hashtable", "memory", "efficient", "dense"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {text="BSD"}
dependencies = []

[project.urls]
"Homepage" = "https://github.com/borgbackup/borghash"
"Changelog" = "https://github.com/borgbackup/borghash/blob/master/changes.rst"

[project.scripts]
borghash-demo = "borghash.demo:main"

[tool.setuptools]
# See also the MANIFEST.in file.
# We want to install all the files in the package directories...
include-package-data = true

[tool.setuptools.exclude-package-data]
# ...except the source files which have been compiled (C extensions):
"*" = ["*.c", "*.h", "*.pyx"]

[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0.3", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
markers = []
